--- a/ShoppingList.Web/ShoppingList.Web/Web.config
+++ b/ShoppingList.Web/ShoppingList.Web/Web.config
@@ -28,6 +28,11 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="2147483647"/>
+      </requestFiltering>
+  </security>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
